fixtures/runtime_semantics/errors/warning-continuation-known-gap.php
<?php
// runtime-semantics: category=errors expect=known_gap known_gap=E_PHP_RUNTIME_UNDEFINED_VARIABLE_WARNING
echo $missing;
echo "after\n";
